src/objects/FSTR__Process_Composer_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting stores values used by Conga Orchestrate.</description>
    <fields>
        <fullName>FSTR__Account_Match_Field__c</fullName>
        <inlineHelpText>Do not use this field unless instructed by Conga Support to do so. This field allows additional matching to occur when searching for Process Team Members based on this account field.</inlineHelpText>
        <label>Account Match Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Allow_Case_Close_From_Process_Completion__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allow Conga Orchestrate to Close a Case when the process it is executing is completed.</inlineHelpText>
        <label>Allow Case Close From Process Completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Allowed_Assignee_Types__c</fullName>
        <inlineHelpText>Only the values entered will display in the Assignee Type picklist when defining a Step. If there are no selected values, all values will display in the Assignee Type picklist.</inlineHelpText>
        <label>Allowed Assignee Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Allowed_Namespaces__c</fullName>
        <defaultValue>&quot;FSTR&quot;</defaultValue>
        <description>This field holds a list of allowable namespaces for ProcessComposer.  This setting tells ProcessComposer the namespaces to look in when checking for allowable process objects.  Namespaces should be separated by semi-colons.  The FSTR namespace is already included.</description>
        <inlineHelpText>This field holds a list of allowable namespaces for Conga Orchestrate.  This setting tells Conga Orchestrate the namespaces to look in when checking for allowable process objects.</inlineHelpText>
        <label>Allowed Namespaces</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Automatic_Chatter_Posting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want Conga Orchestrate to automatically post updates to Chatter.</description>
        <inlineHelpText>Check this box if you want Conga Orchestrate to automatically post updates to Chatter.</inlineHelpText>
        <label>Automatic Chatter Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Chatter_Post_Name_Field__c</fullName>
        <inlineHelpText>This lists the field that you want the automatic Chatter posting to put into the post. It defaults to name but can be any field on the process object.</inlineHelpText>
        <label>Chatter Post Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Chatter_Team_Selection__c</fullName>
        <defaultValue>&quot;PCE&quot;</defaultValue>
        <inlineHelpText>This field indicates if Salesforce Account Team Members or Team Members will be used to @ mention in Chatter posts.  Enter SFDC for Salesforce Account Team and CO for Team Members</inlineHelpText>
        <label>Chatter Team Selection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Closed_Color_Code__c</fullName>
        <defaultValue>&quot;#F95922&quot;</defaultValue>
        <label>Closed Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Closed_Status_Values__c</fullName>
        <defaultValue>&quot;Completed;Canceled&quot;</defaultValue>
        <description>This value defaults to Completed and Canceled. Add any other status value that should count as closed. Used to indicate Closed Status values for custom step objects.</description>
        <inlineHelpText>This value defaults to Completed and Canceled. Add any other status value that should count as closed. Used to indicate Closed Status values for custom step objects.</inlineHelpText>
        <label>Closed Status Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Color_Code_External_Step__c</fullName>
        <description>Hex value for External step color displayed with step information on Process Summary page.</description>
        <label>Process Summary: Color Code External</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Color_Code_Internal_Step__c</fullName>
        <description>Hex value for Internal step color displayed with step information on Process Summary page.</description>
        <label>Process Summary: Color Code - Internal</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Color_Code_Overdue_Status__c</fullName>
        <description>Hex value for overdue color displayed with step information on Process Summary page.</description>
        <label>Process Summary: Color Code - Overdue</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Composer_Certificate_Name__c</fullName>
        <inlineHelpText>Defines the name of the certificate used to authenticate with Composer using an API user.</inlineHelpText>
        <label>Composer Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Composer_Endpoint__c</fullName>
        <inlineHelpText>Defines the endpoint used for Composer merges.</inlineHelpText>
        <label>Composer Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Custom_Process_Group_Account_Field__c</fullName>
        <inlineHelpText>If using a custom process group object and the grouping object contains an Account lookup field, add the Account lookup field&apos;s API name here to display the associated Account&apos;s Name on the Gantt chart. Optional.</inlineHelpText>
        <label>Custom Process Group - Account Lookup</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Custom_Process_Group_End_Date__c</fullName>
        <inlineHelpText>Field for estimated completion date</inlineHelpText>
        <label>Custom Process Group - End Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Custom_Process_Group_Name__c</fullName>
        <description>Custom Process Group Object Name</description>
        <inlineHelpText>Defines the process object for the process group.</inlineHelpText>
        <label>Custom Process Group - Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Custom_Process_Group_Start_Date__c</fullName>
        <inlineHelpText>Field for estimated start date</inlineHelpText>
        <label>Custom Process Group - Start Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Custom_Sharing_Method__c</fullName>
        <inlineHelpText>You should only populate this field if instructed to do so by Conga Support. The text entered here will dictate which custom sharing operations are used.</inlineHelpText>
        <label>Custom Sharing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Deactivated_Step_Color_Code__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <label>Deactivated Step Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Default_Composer_URL__c</fullName>
        <defaultValue>&apos;old&apos;</defaultValue>
        <description>Valid values are &apos;new&apos;, &apos;old&apos;, &apos;other&apos;</description>
        <label>Default Composer URL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Default_Step_Assignee_Type__c</fullName>
        <inlineHelpText>Select the default step Assignee Type option here. If nothing is selected User will be the default assignee type.</inlineHelpText>
        <label>Default Step Assignee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Default_Step_Assignee_User__c</fullName>
        <inlineHelpText>User Id for Default Step Assignee</inlineHelpText>
        <label>Default Step Assignee User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Default_Step_Object__c</fullName>
        <description>Enter the API name of the object that should be defaulted when creating new steps within Definitions.</description>
        <inlineHelpText>Select the object that should be defaulted when creating new steps within Definitions. If no objects are selected, the Salesforce Task object will be defaulted.</inlineHelpText>
        <label>Default Step Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Delayed_Color_Code__c</fullName>
        <defaultValue>&quot;#22c2f9&quot;</defaultValue>
        <label>Delayed Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__DisableSetAccountLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables setting the Account lookup field on process objects and steps.</description>
        <inlineHelpText>Normally, Conga Orchestrate sets the Account object lookup field if a Contact is associated with a process. Enable this setting to prevent this behavior on process objects and steps. This is commonly disabled when default Activity History roll-up is off.</inlineHelpText>
        <label>Disable Setting Account Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Account object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Account object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Business_Process_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Business Process object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Business Process object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Business Process Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Campaign_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Campaign object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Campaign object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Campaign Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Case_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Case object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Case object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Contact object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Contact object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Contract_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Contract object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Contract object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Contract Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Edit_Delete_of_Closed_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this if you would like to prevent users from editing or deleting closed steps generated by Conga Orchestrate. Typically this setting would be turned on for compliance reasons.</inlineHelpText>
        <label>Disable Edit/Delete of Closed Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Event_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Event object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Event object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Event Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this if you would like to disable the export button on the Definition screen.</description>
        <inlineHelpText>Enable this if you would like to disable the export button on the Definition screen.</inlineHelpText>
        <label>Disable Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Lead_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Lead object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Lead object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Non_Task_Step_Assignee_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this if you utilize non task steps and manual sharing functionality on those objects. This will remove assignee type options that don&apos;t apply when defining steps. This should only be checked if instructed to do so by Conga Support.</inlineHelpText>
        <label>Disable Non Task Step Assignee Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Opportunity_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Opportunity object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Opportunity object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Process_Task_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Process Task object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Process Task object. This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Process Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Process_Team_Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this if you DO NOT want the Process Team Duplicate checking turned on.  This should only be checked if instructed to do so by Conga Support.</inlineHelpText>
        <label>Disable Process Team Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Record_Matches_Initiator_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this to disable Record Match Definition Initiators and hide them as options.</inlineHelpText>
        <label>Disable Record Matches Initiator Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Task_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this to disable the Conga Orchestrate trigger on the Task object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</description>
        <inlineHelpText>Enable this to disable the Conga Orchestrate trigger on the Task object.  This should only be done if there are conflicts with other triggers or if directed by Conga support.</inlineHelpText>
        <label>Disable Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_User_Deactivation_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is enabled, deactivating a user in Salesforce will not execute User participation checks. Only enable this feature if instructed to do so by Conga Support.</inlineHelpText>
        <label>Disable User Deactivation Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Disable_Web_Service_Callout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this if you would like to disable the ability to create a step that is a web service callout.</description>
        <inlineHelpText>Enable this if you would like to disable the ability to create a step that is a web service callout.</inlineHelpText>
        <label>Disable Web Service Callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Document_Merge_Use_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Merge - Use QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Skip_Non_Working_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you want Conga Orchestrate to skip non working days (typically weekends and holidays) when calculating due dates select this option.  It also requires a Business Hours record called Conga Orchestrate that specifies your working hours.</inlineHelpText>
        <label>Due Date - Skip Non Working Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Enable_Delete_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to show the delete button on Visualforce pages where users don&apos;t have delete access but have edit access.  Enabling this feature requires a delete button override for the associated object so that sharing rules will be ignored on delete.</inlineHelpText>
        <label>Enable Delete Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Enable_Doc_Merge_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to log document merge urls to the Callout Error Queue.</description>
        <inlineHelpText>Enable this to log document merge urls to the Callout Error Queue.</inlineHelpText>
        <label>Enable Document Merge Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Enable_Orchestrate_Debug_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to have Orchestrate generate custom logs to help debug issues with Creation Conditions on Steps.</description>
        <inlineHelpText>Enable this setting to have Orchestrate generate custom logs to help debug issues with Creation Conditions on Steps.</inlineHelpText>
        <label>Enable Orchestrate Debug Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Enable_Platform_Event_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to log Platform Events.</description>
        <inlineHelpText>Enable this to log Platform Events.</inlineHelpText>
        <label>Enable Platform Event Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Enable_RPA_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this to log RPA requests to the Callout Error Queue.</description>
        <inlineHelpText>Enable this to log RPA requests to the Callout Error Queue.</inlineHelpText>
        <label>Enable RPA Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_On_Calendar_Color_Code__c</fullName>
        <defaultValue>&quot;#CC6600&quot;</defaultValue>
        <label>Event On Calendar Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__External_Step_Label__c</fullName>
        <inlineHelpText>Label for external steps.</inlineHelpText>
        <label>Process Summary: External Step Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Has_Dependent_Fields_Color_Code__c</fullName>
        <defaultValue>&quot;#F95922&quot;</defaultValue>
        <label>Has Dependent Fields Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Has_Gone_Through_Setup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This will determine if our Getting Started page needs to be shown (unchecked) or not (checked). In new orgs this will be unchecked and automatically checked when users finish the Getting Started page.</description>
        <inlineHelpText>This will determine if our Getting Started page needs to be shown (unchecked) or not (checked). In new orgs this will be unchecked and automatically checked when users finish the Getting Started page.</inlineHelpText>
        <label>Has Gone Through New User Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__In_Process_Color_Code__c</fullName>
        <defaultValue>&quot;#5AABCD&quot;</defaultValue>
        <label>In Process Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Include_Non_Closed_Statuses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To include non-closed statuses in &apos;Create if Parent&apos; values for Salesforce Tasks.</inlineHelpText>
        <label>Include Non-Closed Statuses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiator_Custom_Object_Account_Field__c</fullName>
        <inlineHelpText>List of Account fields for each Initiator Custom Object. Used to indicate if a Account lookup field exists on each object.</inlineHelpText>
        <label>Initiator Object - Account Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiator_Custom_Object_Contact_Field__c</fullName>
        <inlineHelpText>List of Contact fields for each Initiator Custom Object. Used to indicate if a Contact lookup field exists on each object.</inlineHelpText>
        <label>Initiator Object - Contact Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiator_Custom_Object_Overflow_Acct__c</fullName>
        <description>Used to hold anything over 255 characters in the Initiator Custom Object - Account Field field.</description>
        <label>Initiator Object Overflow - Acct</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiator_Custom_Object_Overflow_Cont__c</fullName>
        <description>Used to hold anything over 255 characters in the Initiator Custom Object - Contact Field field.</description>
        <label>Initiator Object Overflow - Cont</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiator_Custom_Objects_Overflow__c</fullName>
        <description>Field to catch anything beyond 255 characters in Initiator Objects field.</description>
        <label>Initiator Objects Overflow</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiator_Custom_Objects__c</fullName>
        <inlineHelpText>List of custom objects that have been configured to work with initiators. This requires a trigger to be set up for that object.</inlineHelpText>
        <label>Initiator Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Internal_Step_Label__c</fullName>
        <inlineHelpText>Label for internal steps.</inlineHelpText>
        <label>Process Summary: Internal Step Label</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Not_Yet_Created_Color_Code__c</fullName>
        <defaultValue>&quot;#A6B8CE&quot;</defaultValue>
        <label>Not Yet Created Color Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Notification_Email_Address__c</fullName>
        <description>Error Notifications from Conga Orchestrate will be sent to this Address.</description>
        <inlineHelpText>Error Notifications from Conga Orchestrate will be sent to this Address.</inlineHelpText>
        <label>Notification Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FSTR__ProcessRecordMatchInitiators_Batch_Size__c</fullName>
        <label>ProcessRecordMatchInitiators Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__ProcessSummary_ShowTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to show the step list separated by Internal and External steps along with the Gantt chart. Adds a &apos;Classification&apos; picklist to the Step page.</inlineHelpText>
        <label>Process Summary: Step Classifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Archive_Objects__c</fullName>
        <inlineHelpText>Used to configure Process Archive objects. Separate parameters with dashes, object data with semi-colons.

Signature: object_api_name__c-IsGroupingObject-account_lookup_field__c

Ex: fstr__process_group__c-true-fstr__business_account__c;</inlineHelpText>
        <label>Process Archive Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Objects__c</fullName>
        <description>Semi-colon separated list of object names that are supported as process objects.  This is used in the case that an org has too many custom objects defined and the discovery process will exceed governor limits.  Use the api name of the object (i.e. business_process__c)</description>
        <inlineHelpText>Semi-colon separated list of object names that are supported as process objects.  This is used in the case that an org has too many custom objects defined and the discovery process will exceed governor limits.  Use the api name (i.e. business_process__c)</inlineHelpText>
        <label>Process Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Team_Member_Match_Field__c</fullName>
        <inlineHelpText>Do not use this field unless instructed by Conga Support to do so. This field allows additional matching to occur when searching for Process Team Members.</inlineHelpText>
        <label>Process Team Member Match Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Public_Notes_Field__c</fullName>
        <description>Configuration for public notes displayed with step information on Process Summary page.</description>
        <inlineHelpText>Use the following format: StepObjectName-FieldName. Separate multiple process object/fields with semi-colons.</inlineHelpText>
        <label>Public Notes Field(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_BP_Show_All_Record_Types__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, will show all record types, not just those with Active Definitions, as choices for Recurring Business Processes.</inlineHelpText>
        <label>Recurring Bps: Show All Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Roles_to_Mention_in_Chatter_Post__c</fullName>
        <inlineHelpText>List out the roles that you would like @ mentioned in Chatter posts by Conga Orchestrate. If this field is blank all roles will be mentioned.</inlineHelpText>
        <label>Roles to Mention in Chatter Post</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__SMS_Notifications_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to notify users via SMS that they have been assigned a step by Conga Orchestrate.</inlineHelpText>
        <label>SMS Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Send_Recurring_Batch_Job_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked an email will be sent to whoever scheduled the batch job to process Recurring Business Processes with information about the execution.  If it is unchecked an email will only be sent when errors occur.</inlineHelpText>
        <label>Send Recurring Batch Job Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Show_Advanced_Step_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Advanced Step Settings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Show_Notes_and_Attachments_on_Step_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you would like to have the Notes and Attachments related list show up on the Step page.</inlineHelpText>
        <label>Show Notes and Attachments on Step Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Objects__c</fullName>
        <description>A semi-colon separated list of objects that can be used as steps within a process.  This is used for orgs that have too many custom objects and fail the discovery process.  Use the api name of the object (i.e. client_service_trade__c)</description>
        <inlineHelpText>A semi-colon separated list of objects that can be used as steps within a process.  This is used for orgs that have too many custom objects and fail the discovery process.  Use the api name of the object (i.e. client_service_trade__c)</inlineHelpText>
        <label>Step Objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__TaskCustomLookupRelatedToPassthrough__c</fullName>
        <description>When a custom lookup field is used for related process objects, optionally set this field to pass through a custom value from the process object to the Related To (WhatId) field on Tasks generated as part of the process.</description>
        <inlineHelpText>When a custom lookup field is used for related process objects (&apos;Task Steps: Custom Process Object&apos; is required), optionally set this field to pass through a custom value from the process object to the Related To (WhatId) field on generated Tasks.</inlineHelpText>
        <label>Task Steps: Related To Passthrough Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__TaskCustomProcessObjectLookup__c</fullName>
        <description>Custom business process lookup field. If set, ProcessComposer will set this field rather than the Related To field. It will also pass through the Account field from the process object into the Related To field.</description>
        <inlineHelpText>To use a custom process object lookup field in place of &apos;Related To&apos; for Task steps. When using a custom lookup field, the related Account will be passed into the Related To field automatically.</inlineHelpText>
        <label>Task Steps: Custom Process Object Lookup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Text_Link_URL__c</fullName>
        <inlineHelpText>URL that is to be used in text messages sent for task notification reminders</inlineHelpText>
        <label>Text Link URL</label>
        <type>Url</type>
    </fields>
</CustomObject>